--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="design.css"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>| WDD 130</title>
+    <title>OJO A. Israel |WDD 130</title>
 </head>
 <body>
     <header>
-        <h1>Welcome To Class</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website Siteplan</a>
+        </nav>       
     </header>
     
-    <main></main>
-    <footer></footer>
+    <main>
+        <h1>OJO Abiodun Israel | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is OJO Israel" width="200">
+        <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspirinf software enthusiasist. i had being an in to Education and Farming for several years and i am passionate about what i do. </p>
+    </main>
+    <footer>
+        <p >© 2025 | OJO Israel | Lagos,Nigeria.</p>
+
+    </footer>
     
-    <p >My name is John The Beloved onne of the disciples of Jesus Christ.</p>
-    <button>Submit</button>
-</body>
 </html>
