--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OJO A. Israel |WDD 130</title>
+    <title>OJO Abiodun Israel |WDD 130</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
     
     <main>
         <h1>OJO Abiodun Israel | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is OJO Israel" width="200">
+        <img src="images/profile.jpeg" alt="Hello, my name is OJO Israel" width="200">
         <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspirinf software enthusiasist. i had being an in to Education and Farming for several years and i am passionate about what i do. </p>
     </main>
     <footer>
