--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <main>
         <h1>OJO Abiodun Israel | WDD 130</h1>
-        <img src="images/profile.jpeg" alt="Hello, my name is OJO Israel" width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is OJO Israel" width="200">
         <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspirinf software enthusiasist. i had being an in to Education and Farming for several years and i am passionate about what i do. </p>
     </main>
     <footer>
@@ -23,4 +23,4 @@
 
     </footer>
     </body>
-</html>
+</html> 
