update css folder changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en.US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OJO Abiodun Israel |WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
     <main>
         <h1>OJO Abiodun Israel | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is OJO Israel" width="200">
-        <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspirinf software enthusiasist. i had being an in to Education and Farming for several years and i am passionate about what i do. </p>
+        <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspirinf software enthusiasist. I had being  into Education and Farming for several years and i am passionate about what i do. </p>
     </main>
     <footer>
         <p >© 2025 | OJO Israel | Lagos,Nigeria.</p>
