update the message

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OJO Abiodun Israel |WDD 130</title>
+    <meta name="description" content=" OJO Israel is my name, a student of Software Engineering at the prestigioud BYU, The course is Web Development with code wdd 130. This page shows the extent of my learning rate in the this course and my learning progress.">
+    <meta name="Precious Israel" content="OJO Abiodun Israel">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -19,6 +21,11 @@
         <img src="images/profile.jpg" alt="Hello, my name is OJO Israel" width="200">
         <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspirinf software enthusiasist. I had being  into Education and Farming for several years and i am passionate about what i do. </p>
     </main>
+    <aside>
+        <h2> Utah</h2>
+        <img src="images/utah.jpg" alt="Utah landscape">
+        <p> Utah is a state in the Western United States. It is bordered by Colorado to nthe east, Wycoming to the norteast,idaho to the north, Arizona to the south, and Nevada to the west. It  also touches a corner of New Mexico in the southeasty. The state is a centre of transportation, education, information technology, and research, and a major tourist destination for outdoor recreation. Salt Lake City, the state capital and largest city, is the home to the headquarters of The Church of Jesus Christ of Latter-day Saints(LDS Church.) </p>
+    </aside>
     <footer>
         <p >© 2025 | OJO Israel | Lagos,Nigeria.</p>
 
