--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspiring software engineering enthusiasist. I had being  into Education and Farming for several years and i am passionate about what i do. </p>
     </main>
     <aside>
-        <h2> Utah</h2>
+        <h2> Lagos</h2>
         <img src="images/utah.jpg" alt="Utah landscape">
-        <p> Utah is a state in the Western United States. It is bordered by Colorado to nthe east, Wycoming to the norteast,idaho to the north, Arizona to the south, and Nevada to the west. It  also touches a corner of New Mexico in the southeasty. The state is a centre of transportation, education, information technology, and research, and a major tourist destination for outdoor recreation. Salt Lake City, the state capital and largest city, is the home to the headquarters of The Church of Jesus Christ of Latter-day Saints(LDS Church.) </p>
+        <p> Lagos is a state in the Western Nigeria. It is bordered by the international boundary with Republic of Benin to the west, Ogun to the north, and oyo to the east. It  also touches a corner of the atlantic ocean and lagos lagoon in the south, which enhances excellent trade route. The state is a centre of financial hub and mega metropOis that houses information technology, Education, and a major tourist destination for outdoor recreation due to various beaches spread across the city. Ikeja, the state capital and seat if governance, Lagos is the home to various Church of Church of Latter-day Saints (LDS Church.) It is a home for all and indede a Centre of excellence </p>
     </aside>
     <footer>
         <p >© 2025 | OJO Israel | Lagos,Nigeria.</p>
