--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <h1>OJO Abiodun Israel | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is OJO Israel" width="200">
-        <p>My name is Israel The Beloved onne of the disciples of Jesus Christ and an aspiring software engineering enthusiasist. I had being  into Education and Farming for several years and i am passionate about what i do. </p>
+        <p>My name is Israel The Beloved one of the disciples of Jesus Christ and an aspiring software engineering  enthusiasist. I had being  into Education and Farming for several years and i am passionate about what I do. </p>
     </main>
     <aside>
         <h2> Lagos</h2>
