--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <aside>
         <h2> Lagos</h2>
         <img src="images/lagos.jpg" alt="Lagos landscape">
-        <p> Lagos is a state in the Western Nigeria. It is bordered by the international boundary with Republic of Benin to the west, Ogun to the north, and oyo to the east. It  also touches a corner of the atlantic ocean and lagos lagoon in the south, which enhances excellent trade route. The state is a centre of financial hub and mega metropOis that houses information technology, Education, and a major tourist destination for outdoor recreation due to various beaches spread across the city. Ikeja, the state capital and seat if governance, Lagos is the home to various Church of Church of Latter-day Saints (LDS Church.) It is a home for all and indede a Centre of excellence </p>
+        <p> Lagos is a state in the Western Nigeria. It is bordered by the international boundary with Republic of Benin to the west, Ogun to the north, and oyo to the east. It  also touches a corner of the atlantic ocean and lagos lagoon in the south, which enhances excellent trade route. The state is a centre of financial hub and mega metropOis that houses information technology, Education, and a major tourist destinations for outdoor recreation due to various beaches spread across the city. Ikeja, the state capital and seat of governance, Lagos is the home to various Church of Christ of Latter-day Saints (LDS Church.) It is a home for all and indeed a Centre of Excellence </p>
     </aside>
     <footer>
         <p >© 2025 | OJO Israel | Lagos,Nigeria.</p>
