--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OJO Abiodun Israel |WDD 130</title>
     <meta name="description" content=" OJO Israel is my name, a student of Software Engineering at the prestigioud BYU, The course is Web Development with code wdd 130. This page shows the extent of my learning rate in the this course and my learning progress." >
-    <meta name="Precious Israel" content="OJO Abiodun Israel">
+    <meta name="author" content="OJO Abiodun Israel">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
