--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Logo">
+        <img src="images/logo.png" alt="superr hero">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero2 .jpg" alt="Logo">
+            <img src="images/hero2.jpg" alt="Logo">
             <h1>WHITE WATER RAFTING</h1>
             <div class="inner_div">
                 <article>
