--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,7 @@
             <img src="images/hero2.jpg" alt="Logo">
             <h1>WHITE WATER RAFTING</h1>
             <div class="inner_div">
-                <article>
+                <article class="hero information"> 
                     <img src="images/rafting6.jpg" alt="Rafting Image">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis magni, ratione reprehenderit
                         quisquam enim corrupti commodi, delectus ab esse tenetur nemo, ducimus facere explicabo vitae sed
