--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,19 +38,20 @@
         </div>
         <section> 
            <section class="history">
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis perferendis commodi vero natus
-                quibusdam, doloremque ratione veritatis ut assumenda sed molestias, recusandae nam quod nobis quaerat
-                accusamus harum! Totam?</p>
+                <h2>History</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis perferendis commodi vero natus
+                    quibusdam, doloremque ratione veritatis ut assumenda sed molestias, recusandae nam quod nobis quaerat
+                    accusamus harum! Totam?</p>
             </section>
-          <section>
+          
             <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
-            <img src="images/hero.jpg" alt="Enjoy Adventure">
-            <img src="images/rafting3.jpg" alt="Enjoy Adventure">
-            <img src="images/rafting4.jpg" alt="Enjoy Adventure">
-            <img src="images/rafting5.jpg" alt="Enjoy Adventure">
-            <img src="images/rafting1.jpg" alt="Enjoy Adventure">
+                <h2>Adventure Awaits You!</h2>
+                <img src="images/hero.jpg" alt="Enjoy Adventure">
+                <img src="images/rafting3.jpg" alt="Enjoy Adventure">
+                <img src="images/rafting4.jpg" alt="Enjoy Adventure">
+                <img src="images/rafting5.jpg" alt="Enjoy Adventure">
+                <img src="images/rafting1.jpg" alt="Enjoy Adventure">
+            </section>
         </section>
     </main>
     <footer>
