--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <meta name="description" content=" OJO Israel is my name, a student of Software Engineering at the prestigioud BYU, The course is Web Development with code wdd 130. This page shows the extent of my learning rate in the this course and my learning progress." >
      <meta name="author" content="OJO Abiodun Israel">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.google.com/specimen/Roboto">
 </head>
 <body>
     <header>
@@ -23,8 +24,8 @@
     <main>
         <h1>OJO Abiodun Israel | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is OJO Israel" width="200">
-        <div class="gride">
-            <aside>
+        <div class="grid"> grid
+            <aside class="box">
               <p>My name is Israel The Beloved one of the disciples of Jesus Christ and an aspiring software engineering  enthusiasist. I had being  into Education and Farming for several years and i am passionate about what I do. </p>
             </aside>
         </div>
