--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <img src="images/logo.png" alt="superr hero">
@@ -28,29 +31,52 @@
             <img src="images/hero2.jpg" alt="Logo">
             <h1>WHITE WATER RAFTING</h1>
             <div class="inner_div">
-                <article class="hero information"> 
+                <article class="hero information">
                     <img src="images/rafting6.jpg" alt="Rafting Image">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis magni, ratione reprehenderit
-                        quisquam enim corrupti commodi, delectus ab esse tenetur nemo, ducimus facere explicabo vitae sed
+                        quisquam enim corrupti commodi, delectus ab esse tenetur nemo, ducimus facere explicabo vitae
+                        sed
                         odio aspernatur impedit quas?</p>
                 </article>
-            </div>   
+            </div>
         </div>
-        <section> 
-           <section class="history">
+        <section>
+            <section class="history">
                 <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis perferendis commodi vero natus
-                    quibusdam, doloremque ratione veritatis ut assumenda sed molestias, recusandae nam quod nobis quaerat
-                    accusamus harum! Totam?</p>
+                <div class="history-container">
+                    <img src="images/history-image.jpg" alt="Rafting History">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis perferendis commodi vero
+                        natus
+                        quibusdam, doloremque ratione veritatis ut assumenda sed molestias, recusandae nam quod nobis
+                        quaerat
+                        accusamus harum! Totam?</p>
+                </div>
             </section>
-            
+
             <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/hero.jpg" alt="Enjoy Adventure">
-                <img src="images/rafting3.jpg" alt="Enjoy Adventure">
-                <img src="images/rafting4.jpg" alt="Enjoy Adventure">
-                <img src="images/rafting5.jpg" alt="Enjoy Adventure">
-                <img src="images/rafting1.jpg" alt="Enjoy Adventure">
+                <div class="adventure-gallery">
+                    <figure>
+                        <img src="images/hero.jpg" alt="Alpha Beach">
+                        <figcaption>Alpha Beach</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting3.jpg" alt="Lekki Beach">
+                        <figcaption>Lekki Beach</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting4.jpg" alt="Badagry Beach">
+                        <figcaption>Badagry Beach</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting5.jpg" alt="Landmark Beach">
+                        <figcaption>Landmark Beach</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting1.jpg" alt="Wishpering Palm">
+                        <figcaption>Wishpering Palm</figcaption>
+                    </figure>
+                </div>
             </section>
         </section>
     </main>
@@ -68,5 +94,6 @@
             </a>
         </nav>
     </footer>
-    </body>
+</body>
+
 </html>
