--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,6 +44,9 @@
             <section class="history">
                 <h2>History</h2>
                 <div class="history-container">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nam tenetur deserunt incidunt
+                        corporis, laboriosam mollitia asperiores aliquam quisquam omnis fugit consequuntur possimus fuga
+                        ipsam repudiandae. Quidem voluptates facilis aliquid!</p>
                     <img src="images/history-image.jpg" alt="Rafting History">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis perferendis commodi vero
                         natus
@@ -55,7 +58,7 @@
 
             <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <div class="adventure-gallery">
+                <div class="adventures-gallery">
                     <figure>
                         <img src="images/hero.jpg" alt="Alpha Beach">
                         <figcaption>Alpha Beach</figcaption>
