--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="superr hero">
+        <img src="images/logo.png" alt="super hero">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
