--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -34,9 +34,9 @@
                 <h2>Contact Us</h2>
                 <form action="#">
                     <fieldset class="contact-fields">
-                        <label for="name">Name:</label>
+                        <label for="name"> User Name:</label>
                         <input type="text" id="name" name="from">
-                        <label for="email">e-Mail></label>
+                        <label for="email">E-Mail</label>
                         <input type="email" name="email" id="email">
                         <label for="reason">Reason for contacting us?</label>
                         <select name="reason" id="reason">
@@ -65,23 +65,23 @@
                 </div>
                 <address>30 Jubril Fasanya St, Lekki, ID 23402</address>
                 <a href="tel: 234803573366">(234) 803 837 3366</a>
-                <a href="enquiry@waterrrafting.org">email:----link</a>
+                <a href="enquiry@waterrrafting.org">enquiry@waterrrafting.org</a>
               </div>
         </div>
          <!-- Management Team -->
          <div class="management">
             <div class="member">
-                <figure><img src="images/rafting6.jpg" alt="CEO">
+                <figure><img src="images/funke.jpg" alt="CEO">
                     <figcaption> Oluwafunke Israel-CEO</figcaption>
                 </figure>
             </div>
             <div class="member">
-                <figure><img src="images/rafting4.jpg" alt="COO">
+                <figure><img src="images/israel.jpg" alt="COO">
                     <figcaption> Oluwadamilola Caris-COO</figcaption>
                 </figure>
             </div>
             <div class="member">
-                <figure><img src="images/history-image.jpg" alt="GMD">
+                <figure><img src="images/preciuos.jpg" alt="GMD">
                     <figcaption> Precious Treasure-GMD</figcaption>
                 </figure>
             </div>
@@ -91,7 +91,7 @@
 
     <footer>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
-        <a href="wireframe.png">wireframe</a>
+        <a href="wireframe.png"></a>
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/Facebook.jpg" alt="Facebook">
