--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -44,7 +44,7 @@
                             <option value="reservation">Reservation Question</option>
                             <option value="suggestion">Website Suggestion</option>
                         </select>
-                        <label for="content">enter-----</label>
+                        <label for="content">We appreciate your feedback and request</label>
                         <textarea name="comment;" cols="35" rows="10"></textarea>
                         <div class="sign up">
                             <input type="checkbox" name="subscribe" id="newsletter">
@@ -61,10 +61,10 @@
                 <h2>Contact Information</h2>
                 <div class="map">
                     <!-- Embed Google Map here -->
-                    <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=..." width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <address>30 Jubril Fasanya St, Lekki, ID 23402</address>
-                <a href="tel: 234803573366">(234) 803 837 3366</a>
+                <a href="tel:234803573366">(234)-803-837-3366</a>
                 <a href="enquiry@waterrrafting.org">enquiry@waterrrafting.org</a>
               </div>
         </div>
