--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,7 +61,7 @@
                 <h2>Contact Information</h2>
                 <div class="map">
                     <!-- Embed Google Map here -->
-                    <iframe src="https://www.google.com/maps/embed?pb=..." width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=..." width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <address>30 Jubril Fasanya St, Lekki, ID 23402</address>
                 <a href="tel:234803573366">(234)-803-837-3366</a>
