--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
     <header>
         <img src="images/logo.png" alt="super hero">
@@ -30,7 +32,7 @@
         <div class="main-content">
 
             <!-- Contact Form -->
-             <div class="contact-form">
+            <div class="contact-form">
                 <h1>Contact Us</h1>
                 <form action="#">
                     <fieldset class="contact-fields">
@@ -50,59 +52,62 @@
                             <input type="checkbox" name="subscribe" id="newsletter">
                             <label for="newsletter">Please subcribe for the monthly newsletter</label>
                         </div>
-    
+
                     </fieldset>
                     <button type="submit" class="submit">Send Message</button>
                 </form>
-             </div>
+            </div>
 
-             <!-- Contact Information -->
-              <div class="contact-info">
+            <!-- Contact Information -->
+            <div class="contact-info">
                 <h2>Contact Information</h2>
                 <div class="map">
                     <!-- Embed Google Map here -->
-                    <iframe src="https://www.google.com/maps/embed?pb=..." width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=..." width="450" height="300" style="border:0;"
+                        allowfullscreen="" loading="lazy"></iframe>
                 </div>
-                <address>30 Jubril Fasanya St, Lekki, ID 23402</address>
-                <a href="tel:234803573366">(234)-803-837-3366</a>
-                <a href="enquiry@waterrrafting.org">enquiry@waterrrafting.org</a>
-              </div>
+                   <div>
+                      <address>30 Jubril Fasanya St, Lekki, ID 23402</address>
+                      <a href="tel:234803573366">(234)-803-837-3366</a>
+                      <a href="enquiry@waterrafting.org">enquiry@waterrafting.org</a>
+                  </div>
+            </div>
+            <!-- Management Team -->
+            <div class="management">
+                <div class="member">
+                    <figure><img src="images/funke.jpg" alt="CEO">
+                        <figcaption> Oluwafunke Israel-CEO</figcaption>
+                    </figure>
+                </div>
+                <div class="member">
+                    <figure><img src="images/israel.jpg" alt="COO">
+                        <figcaption> Oluwadamilola Caris-COO</figcaption>
+                    </figure>
+                </div>
+                <div class="member">
+                    <figure><img src="images/preciuos.jpg" alt="GMD">
+                        <figcaption> Precious Treasure-GMD</figcaption>
+                    </figure>
+                </div>
+            </div>
         </div>
-         <!-- Management Team -->
-         <div class="management">
-            <div class="member">
-                <figure><img src="images/funke.jpg" alt="CEO">
-                    <figcaption> Oluwafunke Israel-CEO</figcaption>
-                </figure>
-            </div>
-            <div class="member">
-                <figure><img src="images/israel.jpg" alt="COO">
-                    <figcaption> Oluwadamilola Caris-COO</figcaption>
-                </figure>
-            </div>
-            <div class="member">
-                <figure><img src="images/preciuos.jpg" alt="GMD">
-                    <figcaption> Precious Treasure-GMD</figcaption>
-                </figure>
-            </div>
-           </div>
-    </div>
 
 
-    <footer>
-        <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
-        <a href="wireframe.png"></a>
-        <nav class="sociallinks">
-            <a href="https://facebook.com">
-                <img src="images/Facebook.jpg" alt="Facebook">
-            </a>
-            <a href="https://X.com">
-                <img src="images/x-logo.webp" alt="X">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/Instagram.webp" alt="Instagram">
-            </a>
-        </nav>
-    </footer>
+        <footer>
+            <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
+            <a href="wireframe.png"></a>
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                    <img src="images/Facebook.jpg" alt="Facebook">
+                </a>
+                <a href="https://X.com">
+                    <img src="images/x-logo.webp" alt="X">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/Instagram.webp" alt="Instagram">
+                </a>
+            </nav>
+        </footer>
 </body>
+
 </html>
