--- a/week 3/contact3.html
+++ b/week 3/contact3.html
@@ -35,8 +35,8 @@
             <form action="#">
                 <fieldset class="contact-fields">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="from">
-                    <label for="email">e-Mail></label>
+                    <input type="text" id="name" name="required>
+                    <label for="email">EMail></label>
                     <input type="email" name="email" id="email">
                     <label for="reason">Reason for contacting us?</label>
                     <select name="reason" id="reason">
