--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -34,7 +34,6 @@
                 <!-- Contact Form -->
                 <div class="contact-form">
                     <h1>Contact Us</h1>
-                    <form action="submit_form.php" menthod="post">
                         <fieldset class="contact-fields">
                             <label for="name"> User Name:</label>
                             <input type="text" id="name" name=" required">
@@ -47,7 +46,7 @@
                                 <option value="reservation">Reservation Question</option>
                                 <option value="suggestion">Website Suggestion</option>
                             </select>
-                            <label for="content">We appreciate your feedback and request</label>
+                            <label for="content"id = "conten"></label>
                             <textarea name="comment;" cols="35" rows="10"></textarea>
                             <div class="sign up">
                                 <input type="checkbox" name="subscribe" id="newsletter">
