--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -74,25 +74,21 @@
                 </div>
             </div>
             <!-- Management Team -->
-            <div class="management">
+            <section class="member">
                 <h3> Meet Our Management Team</h3>
-
-                <div class="member">
-                    <figure><img src="images/funke.jpg" alt="CEO">
+                <div class="management">
+                    <figure>
+                        <img src="images/funke .jpg" alt="CEO">
                         <figcaption> Oluwafunke Israel-CEO</figcaption>
                     </figure>
-                </div>
-                <div class="member">
-                    <figure><img src="images/israel.jpg" alt="COO">
+                    <figure><img src="images/israel .jpg" alt="COO">
                         <figcaption> Oluwadamilola Caris-COO</figcaption>
                     </figure>
-                </div>
-                <div class="member">
-                    <figure><img src="images/preciuos.jpg" alt="GMD">
+                    <figure><img src="images/preciuos .jpg" alt="GMD">
                         <figcaption> Precious Treasure-GMD</figcaption>
                     </figure>
                 </div>
-            </div>
+            
         </div>
     </main>
 
