--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -79,13 +79,13 @@
                 <div class="management">
                     <figure>
                         <img src="images/funke .jpg" alt="CEO">
-                        <figcaption> Oluwafunke Israel-CEO</figcaption>
+                        <figcaption> Oluwafunke Israel -Chief Executive Officer</figcaption>
                     </figure>
                     <figure><img src="images/israel .jpg" alt="COO">
-                        <figcaption> Oluwadamilola Caris-COO</figcaption>
+                        <figcaption> Oluwadamilola Caris -Chief Operating Officer</figcaption>
                     </figure>
                     <figure><img src="images/preciuos .jpg" alt="GMD">
-                        <figcaption> Precious Treasure-GMD</figcaption>
+                        <figcaption> Precious Treasure-Group Managing Director</figcaption>
                     </figure>
                 </div>
             
