--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -78,18 +78,18 @@
                 <h3> Meet Our Management Team</h3>
                 <div class="management">
                     <figure>
-                        <img src="images/funke .jpg" alt="CEO">
+                        <img src="images/funke.jpg" alt="CEO">
                         <figcaption> Oluwafunke Israel -Chief Executive Officer</figcaption>
                     </figure>
-                    <figure><img src="images/israel .jpg" alt="COO">
+                    <figure><img src="images/israel.jpg" alt="COO">
                         <figcaption> Oluwadamilola Caris -Chief Operating Officer</figcaption>
                     </figure>
-                    <figure><img src="images/preciuos .jpg" alt="GMD">
+                    <figure><img src="images/preciuos.jpg" alt="GMD">
                         <figcaption> Precious Treasure-Group Managing Director</figcaption>
                     </figure>
                 </div>
-            
-        </div>
+            </section>
+         </div>
     </main>
 
     <footer>
