--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -88,8 +88,8 @@
                         <figcaption> Precious Treasure-Group Managing Director</figcaption>
                     </figure>
                 </div>
-
-        </div>
+            </section>
+        
     </main>
 
     <footer>
