--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -46,7 +46,8 @@
                             <option value="reservation">Reservation Question</option>
                             <option value="suggestion">Website Suggestion</option>
                         </select>
-                        <label for="content" id="conten"></label>
+                        <label for="content" id=">conten"></label>
+                        <input type="radio"name="Message"value="content">
                         <textarea name="comment;" cols="35" rows="10"></textarea>
                         <div class="sign up">
                             <input type="checkbox" name="subscribe" id="newsletter">
