--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -47,7 +47,6 @@
                             <option value="suggestion">Website Suggestion</option>
                         </select>
                         <label for="content" id=">conten"></label>
-                        <input type="radio"name="Message"value="content">
                         <textarea name="comment;" cols="35" rows="10"></textarea>
                         <div class="sign up">
                             <input type="checkbox" name="subscribe" id="newsletter">
@@ -90,9 +89,8 @@
                     </figure>
                 </div>
             </section>
-        
-    </main>
-
+        </div>
+  </main>
     <footer>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
         <a href="wireframe.png"></a>
