--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -54,7 +54,7 @@
                         </div>
 
                     </fieldset>
-                    <button type="submit" class="submit">Send Message</button>
+                  <button type="submit" class="submit">Send Message</button >
 
                 </div>
 
@@ -93,7 +93,8 @@
   </main>
     <footer>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
-        <a href="wireframe.png"></a>
+        <a href="https://app.moqups.com/9dkl0VdWw0TBiNSmXT9TiC7OlmIA70yg/view/page/a9d7706ef">Wireframe</a>
+        <
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/Facebook.jpg" alt="Facebook">
