--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -33,29 +33,30 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
-                    <h1>Contact Us</h1>
-                    <fieldset class="contact-fields">
-                        <label for="name"> User Name:</label>
-                        <input type="text" id="name" name=" required">
-                        <label for="email">E-Mail:</label>
-                        <input type="email" id="email" name="email">
-                        <label><input type="radio" name="reason"></label>
-                        <label for="reason">Reason for contacting us?</label>
-                        <select name="reason" id="reason">
-                            <option value="general">General Inquiry</option>
-                            <option value="reservation">Reservation Question</option>
-                            <option value="suggestion">Website Suggestion</option>
-                        </select>
-                        <!-- <label for="content" id=">conten"></label> -->
-                        <textarea name="comment;" cols="35" rows="10"></textarea>
-                        <div class="sign up">
-                            <input type="checkbox" name="subscribe" id="newsletter">
-                            <label for="newsletter">Please subcribe for the monthly newsletter</label>
-                        </div>
+                    <form>
+                        <h1>Contact Us</h1>
+                        <fieldset class="contact-fields">
+                            <label for="name"> User Name:</label>
+                            <input type="text" id="name" name=" required">
+                            <label for="email">E-Mail:</label>
+                            <input type="email" id="email" name="email">
+                            <label><input type="radio" name="reason"></label>
+                            <label for="reason">Reason for contacting us?</label>
+                            <select name="reason" id="reason">
+                                <option value="general">General Inquiry</option>
+                                <option value="reservation">Reservation Question</option>
+                                <option value="suggestion">Website Suggestion</option>
+                            </select>
+                            <label for="content"> Type you request here:</label>
+                            <textarea name="comment;" cols="35" rows="10"></textarea>
+                            <div class="sign up">
+                                <input type="checkbox" name="subscribe" id="newsletter">
+                                <label for="newsletter">Please subcribe for the monthly newsletter</label>
+                            </div>
 
-                    </fieldset>
-                  <button type="submit" class="submit">Send Message</button >
-
+                        </fieldset>
+                        <button type="submit" class="submit">Send Message</button>
+                    </form>
                 </div>
 
                 <!-- Contact Information -->
@@ -90,12 +91,11 @@
                 </div>
             </section>
         </div>
-  </main>
+    </main>
     <footer>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
         <a href="https://app.moqups.com/9dkl0VdWw0TBiNSmXT9TiC7OlmIA70yg/view/page/a9d7706ef">Wireframe</a>
-        <
-        <nav class="sociallinks">
+        < <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/Facebook.jpg" alt="Facebook">
             </a>
@@ -105,7 +105,7 @@
             <a href="https://instagram.com">
                 <img src="images/Instagram.webp" alt="Instagram">
             </a>
-        </nav>
+            </nav>
     </footer>
 </body>
 
