--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -95,7 +95,7 @@
     <footer>
         <p>© 2025 |White Water Rafting Comapany| OJO Israel | Lagos,Nigeria.</p>
         <a href="https://app.moqups.com/9dkl0VdWw0TBiNSmXT9TiC7OlmIA70yg/view/page/a9d7706ef">Wireframe</a>
-        < <nav class="sociallinks">
+        <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/Facebook.jpg" alt="Facebook">
             </a>
@@ -105,7 +105,7 @@
             <a href="https://instagram.com">
                 <img src="images/Instagram.webp" alt="Instagram">
             </a>
-            </nav>
+        </nav>
     </footer>
 </body>
 
