--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -47,7 +47,7 @@
                                 <option value="reservation">Reservation Question</option>
                                 <option value="suggestion">Website Suggestion</option>
                             </select>
-                            <label for="content"> Type you request here:</label>
+                            <!-- <label for="content"> Type you request here:</label> -->
                             <textarea name="comment;" cols="35" rows="10"></textarea>
                             <div class="sign up">
                                 <input type="checkbox" name="subscribe" id="newsletter">
