--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,24 +36,31 @@
                     <form>
                         <h1>Contact Us</h1>
                         <fieldset class="contact-fields">
-                            <label for="name"> User Name:</label>
-                            <input type="text" id="name" name=" required">
-                            <label for="email">E-Mail:</label>
-                            <input type="email" id="email" name="email">
-                            <label><input type="radio" name="reason"></label>
-                            <label for="reason">Reason for contacting us?</label>
-                            <select name="reason" id="reason">
-                                <option value="general">General Inquiry</option>
-                                <option value="reservation">Reservation Question</option>
-                                <option value="suggestion">Website Suggestion</option>
-                            </select>
-                            <!-- <label for="content"> Type you request here:</label> -->
-                            <textarea name="comment;" cols="35" rows="10"></textarea>
-                            <div class="sign up">
-                                <input type="checkbox" name="subscribe" id="newsletter">
-                                <label for="newsletter">Please subcribe for the monthly newsletter</label>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="name" required>
+
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required>
+
+                            <label for="purpose">PURPOSE OF INQUIRY:</label>
+                            <div>
+                              <input type="radio" id="general" name="purpose" value="General Inquiry">
+                              <label for="general">General Inquiry</label>
+
+                              <input type="radio" id="reservation" name="purpose" value="Reservation Question">
+                              <label for="reservation">Reservation Question</label>
+
+                               <input type="radio" id="suggestion" name="purpose" value="Website Suggestion">
+                               <label for="suggestion">Website Suggestion</label>
                             </div>
 
+                            <label for="message">Your Message:</label>
+                            <textarea id="message" name="message" rows="4" required></textarea>
+
+                            <label for="subscribe">
+                                <input type="checkbox" id="subscribe" name="subscribe">
+                                Please subscribe me to the monthly newsletter
+                            </label>
                         </fieldset>
                         <button type="submit" class="submit">Send Message</button>
                     </form>
@@ -62,16 +69,17 @@
                 <!-- Contact Information -->
                 <div class="company-info">
                     <h2>Company Information</h2>
+                    <p><strong>Address:</strong> 30 Jubril Fasanya St, Lekki, ID 23402</address>
+                    <p><strong>Phone:</strong> (234)-803-837-3366</p>
+                    <p><strong>Email:</strong> enquiry@waterrafting.org</p>
                     <div class="map">
                         <!-- Embed Google Map here -->
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26513.248484819273!2d3.402329539512606!3d6.445642747533413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sng!4v1739088548175!5m2!1sen!2sng"
-                            width="400" height="200" allowfullscreen="" loading="lazy"
+                            width="450" height="350" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                    <address>30 Jubril Fasanya St, Lekki, ID 23402</address>
-                    <a href="tel:234803573366">(234)-803-837-3366</a>
-                    <a href="enquiry@waterrafting.org">enquiry@waterrafting.org</a>
+
                 </div>
             </div>
             <!-- Management Team -->
